<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imagenRegister"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crearcuenta"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:hint="@string/email"
        android:background="@drawable/forget"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:hint="@string/contrasena"
        android:background="@drawable/forget"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:hint="@string/confirmar_contrasena"
        android:background="@drawable/forget"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="#a81919"
        android:text="@string/crear_cuenta"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:onClick="btnRegistrarse"/>

    <TextView
        android:id="@+id/tvAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ya_tiene_una_cuenta_iniciar_sesion"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="btnHaveAccount"/>

</LinearLayout>