<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Home">

    <Button
        android:id="@+id/btnProductosHome"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:background="@color/lightblue"
        android:text="@string/btn_productos"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/btnOfertasHome"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:background="@color/red"
        android:text="@string/btn_ofertas"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnNovedadesHome"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:layout_marginTop="20dp"
        android:background="@color/green"
        android:text="@string/btn_novedades"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnPaquetesHome"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:background="@color/brown"
        android:text="@string/btn_paquetes"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="20dp" />


</LinearLayout>