<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="btnTerminos"
    android:orientation="vertical"
    tools:context=".Configuracion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:id="@+id/textView_Configuracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/title_activity_Configuracion"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_idioma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/cambiar_idioma"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button_espanol"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:onClick="btn_cambiar"
                android:text="@string/espanol"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/button_ingles"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:onClick="btn_cambiar"
                android:text="@string/ingles"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button_Terminos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:onClick="btnTerminos"
                android:text="@string/title_activity_Terminos"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/Button_Preguntas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:onClick="btnPreguntas"
                android:text="@string/Preguntas_frecuentes"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/button_Contacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:onClick="btnContactanos"
                android:text="@string/contacto"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/button_Evaluar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:onClick="evaluar"
                android:text="@string/evaluar_aplicacion"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/button_Ubicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="70dp"
                android:backgroundTint="#C80000"
                android:onClick="btnUbicanos"
                android:text="@string/title_activity_ubicanos"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>